Sun Dec 24 05:31:27 CST 2000 Adam Heath <doogie@debian.org>

  * debian/control: Added depends on sysvinit (>= 2.72), so that we
    can make sure that /etc/rcS.d exists.

Sun Dec 24 05:24:23 CST 2000 Adam Heath <doogie@debian.org>

  * scripts/update-rc.d: Changed documentation and help, as -f only
    applies during remove.

Sun Dec 24 05:10:29 CST 2000 Adam Heath <doogie@debian.org>

  * main/main.c: Added a --force-all option.

Sun Dec 24 04:32:34 CST 2000 Adam Heath <doogie@debian.org>

  * main/main.c: Format help string for --abort-after like other
    option help strings.

Sun Dec 24 02:38:38 CST 2000 Adam Heath <doogie@debian.org>

  * methods/disk.install, methods/disk.setup, methods/disk.update,
    methods/floppy.install, methods/floppy.update, methods/hd.setup,
    methods/hd.unpack, methods/hd.update: Fix to pass on admindir
    from dselect to dpkg.

Sun Dec 24 01:00:59 CST 2000 Adam Heath <doogie@debian.org>

  * scripts/dpkg-source.pl: Minor tweak so that when patch 2.5.4 is
    manually used to apply a diff, it doesn't get applied multiple
    times.

Sat Dec 23 23:28:52 CST 2000 Adam Heath <doogie@debian.org>

  * utils/start-stop-daemon.c: Add --nicelevel, to alter a
    programs priority before starting.

Sat Dec 23 22:56:16 CST 2000 Adam Heath <doogie@debian.org>

  * main/dpkg.8: Document that --largemem is the default, and that
    the test point is 24 megs.

Sat Dec 23 22:53:23 CST 2000 Adam Heath <doogie@debian.org>

  * main/dpkg.8: Document that --set-selections does not actually
    install any packages.

Sat Dec 23 22:41:47 CST 2000 Adam Heath <doogie@debian.org>

  * dpkg-deb/dpkg-deb.1: Fix typo.

Sat Dec 23 22:24:23 CST 2000 Adam Heath <doogie@debian.org>

  * scripts/dpkg-divert.pl: Add --truename option.

Sat Dec 23 21:40:32 CST 2000 Adam Heath <doogie@debian.org>

  * main/dpkg.8:  Document COLUMNS environment variable.

Sat Dec 23 21:20:43 CST 2000 Adam Heath <doogie@debian.org>
