@@ -1,5 +1,7 @@
 dpkg (1.8.0) unstable; urgency=low
 
+  * Made the accelerator keys in dselect's main menu separate options, so
+    that they can be translated separately.  Closes: #50955.
   * Added depends on sysvinit (>= 2.72), so that we can make sure that
     /etc/rcS.d exists.  Closes: #55037.
   * update-rc.d: Changed documentation and help, as -f only applies during
