@@ -1,3 +1,8 @@
+Sun Dec 24 05:58:48 CST 2000 Adam Heath <doogie@debian.org>
+
+  * dselect/main.cc: Made the accelerator keys in dselect's main
+    menu separate options, so that they can be translated separately.
+
 Sun Dec 24 05:31:27 CST 2000 Adam Heath <doogie@debian.org>
 
   * debian/control: Added depends on sysvinit (>= 2.72), so that we
